# alerta_desastres

./: .coverage  pyproject.toml
tests/: test_app.py
