[project]
name = "alerta-desastres"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Leite Gomes",email = "igorgomeleite@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0" 
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warningns'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
ativa_venv = '& "C:\Users\igorg\AppData\Local\Packages\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\LocalCache\Local\pypoetry\Cache\virtualenvs\alerta-desastres-w7Dp4Ak_-py3.13\Scripts\activate.ps1"'
pre_test = 'task lint'
test = 'pytest -s -x --cov=alerta_desastres -vv'
post_test = 'coverage html'
ativa_venv = "powershell -Command \"& ((poetry env info --path).Trim() + '\\Scripts\\Activate.ps1')\""

[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
